<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/subject" 
        android:layout_marginTop="10dp"/>
    <EditText
        android:id="@+id/edit_subject"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="1" 
        android:hint="@string/subject_hint"/>

    <TextView
        android:id="@+id/headline_categories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/categories" 
        android:layout_marginTop="10dp"/>
    <EditText
        android:id="@+id/edit_categories"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="1" 
        android:hint="@string/category_hint"
        />
    
    <Spinner 
        android:id="@+id/choose_categories"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/body" 
        android:layout_marginTop="10dp"/>
    <EditText
        android:id="@+id/edit_body"
        android:layout_width="match_parent"
        android:layout_height="87dp"
        android:maxLines="3"
        android:scrollHorizontally="false" 
        android:hint="@string/body_hint"
        />


</LinearLayout>